--- a/src/app/componets/about/about.component.html
+++ b/src/app/componets/about/about.component.html
@@ -1,15 +1,19 @@
-<div class=" flex items-start font-semibold font-serif">
-    <p>
-        This will be the mission statement ,<br>
-    </p>
-</div>
-<footer class='w-full text-center border-t border-grey p-4 pin-b  bg-gray-100'>
-    <div>
-        Contact Us: <a href="#"
-            class="  bg-gray-100 border border-logo-700 rounded-full text-l font-normal m-4 pl-3 pr-3 p-1 hover:shadow-lg ">
-            Email</a><br>
-        <p>Phone: (800)123-4567</p>
-        <p>fax: (800)123-4567</p>
+<div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> <!-- ORG CARD -->
+    <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
+    <div class="p-4">
+      <div class="flex items-center">
+        <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
+        <span
+          class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
+  
+      </div>
+      <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold
+        Street<br>Redding, CA</div>
+      <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur adipisicing
+        elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
     </div>
+  </div>
 
-</footer>
+  <li *ngFor="let missions of MissionList">
+    {{missions.organizationName}}
+  </li >
