--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -1,27 +1,24 @@
 <!-- Source for form layout. Note: custom built for this form, but referenced from the following:
-https://tailwindcss-custom-forms.netlify.app/ -->
+    https://tailwindcss-custom-forms.netlify.app/ -->
 
-<div class="bg-gray-100 rounded shadow-lg flex flex-row w-full" style="height:500px">
-    <div class="hidden md:block w-1/3 bg-cover bg-center h-full flex-shrink-0 ">
-        <div class="bg-white shadow-lg w-3/4 m-12 border rounded-lg overflow-hidden">
-            <!-- ORG CARD -->
-            <img class="h-48 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
-            <div class="p-4">
-                <div class="flex items-center">
-                    <h4 class="font-semibold text-lg text-gray-900 tracking-wide">Organization Name</h4>
-                    <span
-                        class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
+<form (ngSubmit)="addMission()">
+    <div class="bg-gray-100 rounded shadow-lg flex flex-row w-full" style="height:500px">
+        <div class="hidden md:block w-1/3 bg-cover bg-center h-full flex-shrink-0 ">
+            <div class="bg-white shadow-lg w-3/4 m-12 border rounded-lg overflow-hidden">
+                <!-- ORG CARD -->
+                <img class="h-48 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
+                <div class="p-4">
+                    <div class="flex items-center">
+                        <h4 class="font-semibold text-lg text-gray-900 tracking-wide">{{newMission.organizationName}}</h4>
+                        <span
+                            class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
 
+                    </div>
+                    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">{{newMission.organizationStreetAddress}}<br>{{newMission.city}},{{newMission.state}} {{newMission.zip}} {{newMission.organizationCountry}}</div>
+                    <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: {{newMission.bio}}</div>
                 </div>
-                <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">16348 Gold
-                    Street<br>Redding, CA</div>
-                <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: Lorem ipsum dolor sit amet consectetur
-                    adipisicing
-                    elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
             </div>
         </div>
-    </div>
-    <form (ngSubmit)="addMission()" class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg">
         <div class="p-5 w-2/3 flex flex-col justify-center items-center">
             <!-- LEFT SIDE OF FORM: LOGO & BIO -->
 
@@ -31,13 +28,13 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     Logo </label>
                 <input
                     class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                    id="logo" type="file" accept="image" [(ngModel)]="newMission.image">
+                    id="logo" type="file" accept="image" [(ngModel)]="newMission.image" name="logo">
             </div>
             <div class="flex flex-col mb-5 w-full">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="bio"> Bio
                 </label>
                 <textarea
-                    class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-24 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
+                    class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-24 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500" 
                     id="bio" type="text" placeholder="Short summary of what you're most known for"
                     [(ngModel)]="newMission.bio" name="bio"></textarea>
             </div>
@@ -54,19 +51,19 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     name="orgName">
             </div>
             <div class="flex flex-col mb-4 w-full">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-address">
+                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-street">
                     Organization Address </label>
                 <input
                     class="appearance-none block w-full bg-gray-100 text-gray-700 border shadow border-gray-500 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                     id="org-street" type="text" placeholder="Street Address"
-                    [(ngModel)]="newMission.organizationStreetAddress" name="orgSA">
+                    [(ngModel)]="newMission.organizationStreetAddress" name="org-street">
             </div>
             <div class="flex flex-col mb-4 w-full">
-                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-address">
+                <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-city">
                     City </label>
                 <input
                     class="appearance-none block w-full bg-gray-100 text-gray-700 border shadow border-gray-500 rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                    id="org-city" type="text" placeholder="City" [(ngModel)]="newMission.city" name="city">
+                    id="org-city" type="text" placeholder="City" [(ngModel)]="newMission.city" name="org-city">
             </div>
 
             <div class="flex flex-wrap -mx-3 mb-4">
@@ -77,7 +74,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     <div class="relative">
                         <select
                             class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                            id="org-state" [(ngModel)]="newMission.state" name="misson-state">
+                            id="org-state" [(ngModel)]="newMission.state" name="org-state">
                             <option value="AL">Alabama</option>
                             <option value="AK">Alaska</option>
                             <option value="AZ">Arizona</option>
@@ -145,7 +142,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 shadow rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-city" type="text" placeholder="90210" [(ngModel)]="newMission.zip" name="org-zip">
+                        id="org-zip" type="text" placeholder="90210" [(ngModel)]="newMission.zip" name="org-zip">
                 </div>
                 <div class="w-full md:w-1/3 px-3 mb-6 md:mb-0">
                     <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="org-country">
@@ -154,7 +151,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     <div class="relative">
                         <select
                             class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                            id="org-country" [(ngModel)]="newMission.missionLocationCountry" name="org-country">
+                            id="org-country" [(ngModel)]="newMission.organizationCountry" name="org-country">
                             <option value="Afganistan">Afghanistan</option>
                             <option value="Albania">Albania</option>
                             <option value="Algeria">Algeria</option>
@@ -386,7 +383,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                             <option value="United Kingdom">United Kingdom</option>
                             <option value="Ukraine">Ukraine</option>
                             <option value="United Arab Erimates">United Arab Emirates</option>
-                            <option value="United States of America">United States of America</option>
+                            <option value="USA">United States of America</option>
                             <option value="Uraguay">Uruguay</option>
                             <option value="Uzbekistan">Uzbekistan</option>
                             <option value="Vanuatu">Vanuatu</option>
@@ -424,7 +421,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-500 shadow rounded py-2 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-city" type="text" placeholder="Albuquerque"
+                        id="mission-city" type="text" placeholder="Albuquerque"
                         [(ngModel)]="newMission.missionLocationCity" name="mission-city">
                 </div>
                 <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
@@ -435,7 +432,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                     <div class="relative">
                         <select
                             class="block appearance-none w-full bg-gray-100 border border-gray-500 shadow text-gray-700 py-2 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                            id="org-country" [(ngModel)]="newMission.missionLocationCountry" name="mission-country">
+                            id="mission-country" [(ngModel)]="newMission.missionLocationCountry" name="mission-country">
                             <option value="Afganistan">Afghanistan</option>
                             <option value="Albania">Albania</option>
                             <option value="Algeria">Algeria</option>
@@ -697,5 +694,5 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                 Changes</button>
 
         </div>
-    </form>
-</div>
+    </div>
+</form>
