--- a/src/app/componets/login/login.component.html
+++ b/src/app/componets/login/login.component.html
@@ -3,15 +3,50 @@
         style="background-image:url(https://images.unsplash.com/photo-1500534314209-a25ddb2bd429?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=1534&amp;q=80)">
     </div>
     <!-- Form still needs an onSubmit() -->
-    <form class="p-5 w-full flex flex-col justify-center items-center shadow-2xl"> 
+    <form  *ngIf="!isLoggedIn"
+    name="form"
+    (ngSubmit)="f.form.valid && onSubmit()"
+    #f="ngForm"
+    novalidate
+    class="p-5 w-full flex flex-col justify-center items-center shadow-2xl"> 
         <div>
             <div class="flex flex-col mb-10 w-full">
                 <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
                     Username </label>
                 <input
                     class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                    id="email" type="text" placeholder="username" [(ngModel)]="user.username">
+                    id="email" type="text" placeholder="username"  [(ngModel)]="form.username"
+                    required
+                    #username="ngModel">
+                    <div
+                    role="alert"
+                    *ngIf="f.submitted && username.invalid"
+                  >
+                    Username is required!
+                  </div>
             </div>
+
+            <div class="flex flex-col mb-10 w-full">
+                <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
+                    Password </label>
+                <input
+                    class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
+                    id="passsword" type="text" placeholder="password"  [(ngModel)]="form.password"
+                    required
+                    minlength="6"
+                    #password="ngModel">
+         <div
+          
+          role="alert"
+          *ngIf="f.submitted && password.invalid"
+        >
+          <div *ngIf="password.errors.required">Password is required</div>
+          <div *ngIf="password.errors.minlength">
+            Password must be at least 6 characters
+          </div>
+            </div>
+
+
             <div class="flex flex-col w-full"> <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
                     Password </label>
                 <input
@@ -20,5 +55,19 @@
             </div>
             <button class="bg-gray-700 text-white rounded py-2 px-5 w-64 mt-10">Sign In</button>
         </div>
+
+        <div>
+            <div
+              
+              role="alert"
+              *ngIf="f.submitted && isLoginFailed"
+            >
+              Login failed: {{ errorMessage }}
+            </div>
+          </div>
     </form>
+
+    <div *ngIf="isLoggedIn">
+        Logged in as {{ roles }}.
+      </div>
 </div>
