--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -14,7 +14,12 @@
     </a>
 </div> -->
 
-<form (ngSubmit)="addUser()" class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg">
+<form *ngIf="!isSuccessful"
+name="form"
+(ngSubmit)="f.form.valid && onSubmit()"
+#f="ngForm"
+novalidate
+ class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg">
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="firstName">
@@ -90,5 +95,11 @@
             <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">Submit</button>
         </div>
     </div>
-
+    <div *ngIf="f.submitted && isSignUpFailed">
+        Signup failed!<br />{{ errorMessage }}
+      </div>
 </form>
+
+<div *ngIf="isSuccessful">
+    Your registration is successful!
+  </div>
