--- a/src/app/componets/login/login.component.html
+++ b/src/app/componets/login/login.component.html
@@ -11,13 +11,14 @@
     class="p-5 w-full flex flex-col justify-center items-center shadow-2xl"> 
         <div>
             <div class="flex flex-col mb-10 w-full">
-                <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
+                <label class="block text-gray-700 text-sm font-medium pb-1" for="username">
                     Username </label>
                 <input
                     class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                    id="email" type="text" placeholder="username"  [(ngModel)]="form.username"
+                    id="username" type="text" placeholder="username"  [(ngModel)]="form.username"
                     required
                     #username="ngModel">
+                   
                     <div
                     role="alert"
                     *ngIf="f.submitted && username.invalid"
@@ -27,7 +28,7 @@
             </div>
 
             <div class="flex flex-col mb-10 w-full">
-                <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
+                <label class="block text-gray-700 text-sm font-medium pb-1" for="password">
                     Password </label>
                 <input
                     class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
@@ -35,24 +36,19 @@
                     required
                     minlength="6"
                     #password="ngModel">
-         <div
+                <div
           
           role="alert"
           *ngIf="f.submitted && password.invalid"
         >
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">
+                    <div *ngIf="password.errors.required">Password is required</div>
+                    <div *ngIf="password.errors.minlength">
             Password must be at least 6 characters
-          </div>
+                 </div>
             </div>
 
 
-            <div class="flex flex-col w-full"> <label class="block text-gray-700 text-sm font-medium pb-1" for="email">
-                    Password </label>
-                <input
-                    class="bg-gray-100 appearance-none border-2 border-gray-200 rounded w-full py-2 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
-                    id="password" type="text" placeholder="******" [(ngModel)]="user.password">
-            </div>
+           
             <button class="bg-gray-700 text-white rounded py-2 px-5 w-64 mt-10">Sign In</button>
         </div>
 
@@ -65,6 +61,7 @@
               Login failed: {{ errorMessage }}
             </div>
           </div>
+        </div>
     </form>
 
     <div *ngIf="isLoggedIn">
