--- a/src/app/componets/map-card/map-card.component.html
+++ b/src/app/componets/map-card/map-card.component.html
@@ -1,4 +1,6 @@
-<div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> <!-- ORG CARD -->
+ <div class ="md:flex">
+  <div class="md:flex-shrink-0"> 
+  <div class="absolute bg-white shadow-lg w-1/5 m-6 rounded-lg overflow-hidden"> <!-- ORG CARD -->
     <img class="h-40 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
     <div class="p-4">
       <div class="flex items-center">
@@ -13,3 +15,5 @@
         elit. Aliquid quia voluptate esse quod temporibus, et sequi dicta porro reiciendis fugiat?</div>
     </div>
   </div>
+</div>
+</div>
