--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -123,19 +123,21 @@
 	</mat-toolbar>
   
 	<mat-sidenav-container fxFlexFill>
-	  <mat-sidenav #sidenavap>
+	  <mat-sidenav #sidenav>
 		  
 		<mat-nav-list>
-		  <!-- <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a> -->
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="home" mat-list-item>Home</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="user-profile"  mat-list-item>User Profile</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="about" mat-list-item>About</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="missions-profile" mat-list-item>Missions Profile</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="login" mat-list-item>Login</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="signup"mat-list-item>Signup</a>
+		  <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+		  <a class="inline-block border  font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="home" mat-list-item>Home</a>
+		  <a class="inline-block border  font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="user-profile"  mat-list-item>User Profile</a>
+		  <a class="inline-block border  font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="about" mat-list-item>About</a>
+		  <a class="inline-block border  font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="missions-profile" mat-list-item>Missions Profile</a>
+		  <a class="inline-block border  font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="login" mat-list-item>Login</a>
+		  <a class="inline-block border  font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="signup"mat-list-item>Signup</a>
 		</mat-nav-list>
 	  </mat-sidenav>
-	  
+	  <mat-sidenav-content fxFlexFill>   
+
+	  </mat-sidenav-content>
 	</mat-sidenav-container>
   </div>
 
