--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 			<img alt="logo" class="w-48 mr-2 shadow-lg" src="../assets/images/Logo.png">
 		</a>
 	</div> -->
-	<!-- search field
+<!-- search field
 	<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
 		id="nav-content">
 		<div class="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0">
@@ -77,100 +77,108 @@
 	}
 </script> -->
 
-<div style="height: 80vh;">
+<div style="height: 10vh;">
 	<mat-toolbar color="primary">
-	  <mat-toolbar-row>
-		<button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
-			
-		  <mat-icon>Menu</mat-icon>
-		</button>
-		<span>
-			<div class="flex items-center flex-shrink-0 mr-6">
-			<a routerLink="home" routerLinkActive="active">
-				<img alt="logo" class="w-48 mr-2 shadow-lg" src="../assets/images/Logo.png">
-			</a>
-		</div>
-	</span>
-		<span class="menu-spacer"></span>
-		<div fxShow="true" fxHide.lt-md>
-		  <!-- The following menu items will be hidden on both SM and XS screen sizes -->
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="home" mat-button>Home</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="user-profile"  mat-button>User Profile</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="about" mat-button>About</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="missions-profile" mat-button>Missions Profile</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="login" mat-button>Login</a>
-		  <a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"routerLink="signup" mat-button>Signup</a>
-		</div>
-		<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
-		id="nav-content">
-		<div class="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0">
-			<div class="relative pull-right pl-4 pr-4 md:pr-0">
-				<input type="search" placeholder="Search"
-					class="w-full bg-white text-sm text-gray-800 transition border focus:outline-none focus:border-logo-900 rounded py-1 px-2 pl-10 appearance-none leading-normal">
-				<div class="absolute search-icon" style="top: 0.375rem;left: 1.75rem;">
-					<svg class="fill-current pointer-events-none text-gray-800 w-4 h-4"
-						xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-						<path
-							d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z">
-						</path>
-					</svg>
+		<mat-toolbar-row>
+			<button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+				<mat-icon>Menu</mat-icon>
+			</button>
+			<span>
+				<div class="flex items-center flex-shrink-0 mr-6">
+					<a routerLink="home" routerLinkActive="active">
+						<img alt="logo" class="w-48 mr-2 shadow-lg" src="../assets/images/Logo.png">
+					</a>
+				</div>
+			</span>
+			<span class="menu-spacer"></span>
+			<div fxShow="true" fxHide.lt-md>
+				<!-- The following menu items will be hidden on both SM and XS screen sizes -->
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="home" mat-button>Home</a>
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="user-profile" mat-button>User Profile</a>
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="about" mat-button>About</a>
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="missions-profile" mat-button>Missions Profile</a>
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="login" mat-button>Login</a>
+				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
+					routerLink="signup" mat-button>Signup</a>
+			</div>
+			<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
+				id="nav-content">
+				<div class="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0">
+					<div class="relative pull-right pl-4 pr-4 md:pr-0">
+						<input type="search" placeholder="Search"
+							class="w-full bg-white text-sm text-gray-800 transition border focus:outline-none focus:border-logo-900 rounded py-1 px-2 pl-10 appearance-none leading-normal">
+						<div class="absolute search-icon" style="top: 0.375rem;left: 1.75rem;">
+							<svg class="fill-current pointer-events-none text-gray-800 w-4 h-4"
+								xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+								<path
+									d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z">
+								</path>
+							</svg>
+						</div>
+					</div>
 				</div>
 			</div>
-		</div>
-	</div>
-		
-	  </mat-toolbar-row>
+
+		</mat-toolbar-row>
 	</mat-toolbar>
-  
+
 	<mat-sidenav-container fxFlexFill>
-	  <mat-sidenav #sidenav>
-		<mat-nav-list>
-		  <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
-		  <a routerLink="home" mat-list-item>Home</a>
-		  <a routerLink="user-profile"  mat-list-item>User Profile</a>
-		  <a routerLink="about" mat-list-item>About</a>
-		  <a routerLink="missions-profile" mat-list-item>Missions Profile</a>
-		  <a routerLink="login" mat-list-item>Login</a>
-		  <a routerLink="signup"mat-list-item>Signup</a>
-		</mat-nav-list>
-	  </mat-sidenav>
-	  
+		<mat-sidenav #sidenav>
+			<mat-nav-list>
+				<a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+				<a routerLink="home" mat-list-item>Home</a>
+				<a routerLink="user-profile" mat-list-item>User Profile</a>
+				<a routerLink="about" mat-list-item>About</a>
+				<a routerLink="missions-profile" mat-list-item>Missions Profile</a>
+				<a routerLink="login" mat-list-item>Login</a>
+				<a routerLink="signup" mat-list-item>Signup</a>
+			</mat-nav-list>
+		</mat-sidenav>
+
 	</mat-sidenav-container>
-  </div>
+</div>
 
 <router-outlet></router-outlet>
 
 
-<footer class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-1 pin-b bg-gray-100'>
+<footer
+	class='flex items-center justify-center flex-wrap w-full text-center border-t border-grey p-1 pin-b bg-gray-100'>
 	<div class="flex flex-wrap justify-center p-1">
 		<div class="flex flex-wrap mb-2 w-full">
-		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
-			<h3 class="text-2xl py-4">About Us</h3>
-			<p>This application was produced by Bethel School of Technology students: Brittani Falor, Colin Cantwell, Scott Goodwin and Connor Chaffin. This web application is built on an Angular Front-end Framework and sourced from a SQL Database using Express/Node.js Back-end.
-			</p>
-		  </div>
-		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 pl-8">
-			<h3 class="text-2xl py-4">Contact Us</h3>
-			<ul>
-			  <li>Phone: <a href="#">900-800-2357</a></li>
-			  <li>Email: <a href="#">globalmissions@mtgc.com</a></li>
-			</ul>
-			<h3 class="text-xl py-4">
-				<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4"
-					routerLink="admin" routerLinkActive="active">Admin</a>
-			</h3>
-			
-		  </div>
-		  <div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 ">
-			<h3 class="text-2xl py-4">GitHub Links</h3>
-			<ul>
-			  <li><a href="https://github.com/Cantwell136">Colin Cantwell</a></li>
-			  <li><a href="https://github.com/scottyg68">Scott Goodwin</a></li>
-			  <li><a href="https://github.com/BrittaniFalor">Brittani Falor</a></li>
-			  <li><a href="https://github.com/connor-chaffin">Connor Chaffin</a></li>
-			</ul>
-		  </div>
-		  
+			<div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/2 ">
+				<h3 class="text-2xl py-4">About Us</h3>
+				<p>This application was produced by Bethel School of Technology students: Brittani Falor, Colin
+					Cantwell, Scott Goodwin and Connor Chaffin. This web application is built on an Angular Front-end
+					Framework and sourced from a SQL Database using Express/Node.js Back-end.
+				</p>
+			</div>
+			<div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 pl-8">
+				<h3 class="text-2xl py-4">Contact Us</h3>
+				<ul>
+					<li>Phone: <a href="#">900-800-2357</a></li>
+					<li>Email: <a href="#">globalmissions@mtgc.com</a></li>
+				</ul>
+				<h3 class="text-xl py-4">
+					<a class="inline-block text-gray-500 no-underline hover:text-gray-900 hover:font-normal py-2 px-4"
+						routerLink="admin" routerLinkActive="active">Admin</a>
+				</h3>
+
+			</div>
+			<div class="w-full sm:w-1/2 md:w-1/2 lg:w-1/4 ">
+				<h3 class="text-2xl py-4">GitHub Links</h3>
+				<ul>
+					<li><a href="https://github.com/Cantwell136">Colin Cantwell</a></li>
+					<li><a href="https://github.com/scottyg68">Scott Goodwin</a></li>
+					<li><a href="https://github.com/BrittaniFalor">Brittani Falor</a></li>
+					<li><a href="https://github.com/connor-chaffin">Connor Chaffin</a></li>
+				</ul>
+			</div>
+
 		</div>
-	  </div>
+	</div>
 </footer>
