--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,26 +77,28 @@
 	}
 </script> -->
 
-<div style="height: 10vh;">
-	<mat-toolbar color="primary">
+<div class="flex sticky justify-between flex-wrap shadow-md bg-gray-100 p-4 w-full z-20 top-0">
+	<mat-toolbar class="flex items-center mr-6">
 		<mat-toolbar-row>
-			<button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
-				<mat-icon>Menu</mat-icon>
+			<button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm class="sm:top-0 sm:right-0">
+				<span class="material-icons ">
+					menu
+					</span>
 			</button>
 			<span>
-				<div class="flex items-center flex-shrink-0 mr-6">
+				<div class="flex mr-6 ">
 					<a routerLink="home" routerLinkActive="active">
-						<img alt="logo" class="w-48 mr-2 shadow-lg" src="../assets/images/Logo.png">
+						<img alt="logo" class="w-40 mr-2 shadow-lg" src="../assets/images/Logo.png">
 					</a>
 				</div>
 			</span>
-			<span class="menu-spacer"></span>
-			<div fxShow="true" fxHide.lt-md>
-				<!-- The following menu items will be hidden on both SM and XS screen sizes -->
+			
+			<div fxShow="true" fxHide.lt-md class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden  pt-6 lg:pt-0" id="nav-content">
+				<!-- The following menu items are for screen sizes above Small size -->
 				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="home" mat-button>Home</a>
 				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
-					routerLink="user-profile" mat-button>User Profile</a>
+					routerLink="user-profile" mat-button>User Profiles</a>
 				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="about" mat-button>About</a>
 				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
@@ -106,31 +108,15 @@
 				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="signup" mat-button>Signup</a>
 			</div>
-			<div class="w-full flex-grow lg:flex  lg:content-center lg:items-center lg:w-auto hidden mt-2 lg:mt-0 z-20"
-				id="nav-content">
-				<div class="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0">
-					<div class="relative pull-right pl-4 pr-4 md:pr-0">
-						<input type="search" placeholder="Search"
-							class="w-full bg-white text-sm text-gray-800 transition border focus:outline-none focus:border-logo-900 rounded py-1 px-2 pl-10 appearance-none leading-normal">
-						<div class="absolute search-icon" style="top: 0.375rem;left: 1.75rem;">
-							<svg class="fill-current pointer-events-none text-gray-800 w-4 h-4"
-								xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-								<path
-									d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z">
-								</path>
-							</svg>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 
 		</mat-toolbar-row>
 	</mat-toolbar>
-
-	<mat-sidenav-container fxFlexFill>
+	<!-- Menu items for Hamburger -->
+	<mat-sidenav-container fxFlexFill >
 		<mat-sidenav #sidenav>
-			<mat-nav-list>
-				<a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+			<mat-nav-list >
+				<!-- <a (click)="sidenav.toggle()"  mat-list-item>Close</a>  -->
 				<a routerLink="home" mat-list-item>Home</a>
 				<a routerLink="user-profile" mat-list-item>User Profile</a>
 				<a routerLink="about" mat-list-item>About</a>
