small adjustments on mission profile page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@
 				</div>
 			</span>
 			
-			<div fxShow="true" fxHide.lt-md class="w-full flex-grow lg:flex lg:items-center lg:w-auto hidden  pt-6 lg:pt-0" id="nav-content">
+			<div fxShow="true" fxHide.lt-md class="justify-end w-full flex-grow lg:flex lg:items-center lg:w-auto hidden  pt-6 lg:pt-0" id="nav-content">
 				<!-- The following menu items are for screen sizes above Small size -->
 				<a class="inline-block border border-logo-700 rounded-full font-normal text-gray-600 no-underline hover:text-gray-900 hover:text-underline hover:shadow-lg py-2 px-4"
 					routerLink="home" mat-button>Home</a>
