--- a/src/app/componets/user-profile/user-profile.component.html
+++ b/src/app/componets/user-profile/user-profile.component.html
@@ -1,39 +1,49 @@
-<div class="bg-gray-200"> 
+<div class="bg-gray-200">
 
     <div class="max-w-2xl flex items-center h-auto lg:h-screen flex-wrap mx-auto my-32 lg:my-0">
-    
-    
+
+
         <!--Main Col-->
         <div id="profile"
             class="flex items-start w-full lg:w-3/5 rounded-lg lg:rounded-l-lg lg:rounded-r-none shadow-2xl bg-white opacity-75 mx-6 lg:mx-0">
-    
-    
+
+
             <div class="p-4 md:p-12 text-center lg:text-left">
                 <!-- Image for mobile view-->
                 <div class="block lg:hidden rounded-full shadow-xl mx-auto -mt-16 h-48 w-48 bg-cover bg-center"
                     style="background-image: url('https://source.unsplash.com/MP0IUfwrn0A')"></div>
-    
-                <h1 class="text-3xl font-bold pt-8 lg:pt-0">Mapping the Global Church</h1>
+
+                <h1 class="text-3xl font-bold pt-8 lg:pt-0">{{ currentUser.username }}</h1>
                 <div class="mx-auto lg:mx-0 w-4/5 pt-3 border-b-2 border-logo-900 opacity-25"></div>
                 <p class="pt-4 text-base font-bold flex items-center justify-center lg:justify-start"><svg
-                        class="h-4 fill-current text-logo-700 pr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        class="h-4 fill-current text-logo-700 pr-4" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 20 20">
                         <path
                             d="M9 12H1v6a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-6h-8v2H9v-2zm0-1H0V5c0-1.1.9-2 2-2h4V2a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v1h4a2 2 0 0 1 2 2v6h-9V9H9v2zm3-8V2H8v1h4z" />
-                        </svg> What you do</p>
+                    </svg> What you do</p>
                 <p class="pt-2 text-gray-600 text-xs lg:text-sm flex items-center justify-center lg:justify-start"><svg
-                        class="h-4 fill-current text-logo-700 pr-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                        class="h-4 fill-current text-logo-700 pr-4" xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 20 20">
                         <path
                             d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20zm7.75-8a8.01 8.01 0 0 0 0-4h-3.82a28.81 28.81 0 0 1 0 4h3.82zm-.82 2h-3.22a14.44 14.44 0 0 1-.95 3.51A8.03 8.03 0 0 0 16.93 14zm-8.85-2h3.84a24.61 24.61 0 0 0 0-4H8.08a24.61 24.61 0 0 0 0 4zm.25 2c.41 2.4 1.13 4 1.67 4s1.26-1.6 1.67-4H8.33zm-6.08-2h3.82a28.81 28.81 0 0 1 0-4H2.25a8.01 8.01 0 0 0 0 4zm.82 2a8.03 8.03 0 0 0 4.17 3.51c-.42-.96-.74-2.16-.95-3.51H3.07zm13.86-8a8.03 8.03 0 0 0-4.17-3.51c.42.96.74 2.16.95 3.51h3.22zm-8.6 0h3.34c-.41-2.4-1.13-4-1.67-4S8.74 3.6 8.33 6zM3.07 6h3.22c.2-1.35.53-2.55.95-3.51A8.03 8.03 0 0 0 3.07 6z" />
-                        </svg> Your Location - 25.0000° N, 71.0000° W</p>
-                <p class="pt-8 text-sm">Connecting Missions to the Global Church</p>
-    
+                    </svg> Your Location - 25.0000° N, 71.0000° W</p>
+                <p class="pt-8 text-sm">{{currentUser.Bio}}</p>
+
                 <div class="pt-12 pb-8">
-                    <button class="border border-logo-700 bg-logo-700 hover:shadow-xl text-white font-bold py-2 px-4 rounded-full">
+                    <button
+                        class="border border-logo-700 bg-logo-700 hover:shadow-xl text-white font-bold py-2 px-4 rounded-full">
                         Get In Touch
                     </button>
                 </div>
-    
+
                 <div class="mt-6 pb-16 lg:pb-0 w-4/5 lg:w-full mx-auto flex flex-wrap items-center justify-between">
+                    <a class="link" href="#" data-tippy-content="@facebook_handle"><svg
+                        class="h-6 fill-current text-gray-600 hover:text-logo-700" role="img" viewBox="0 0 24 24"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <title>Facebook</title>
+                        <path
+                            d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.408.593 24 1.324 24h11.494v-9.294H9.689v-3.621h3.129V8.41c0-3.099 1.894-4.785 4.659-4.785 1.325 0 2.464.097 2.796.141v3.24h-1.921c-1.5 0-1.792.721-1.792 1.771v2.311h3.584l-.465 3.63H16.56V24h6.115c.733 0 1.325-.592 1.325-1.324V1.324C24 .593 23.408 0 22.676 0" />
+                    </svg></a>
                     <a class="link" href="#" data-tippy-content="@facebook_handle"><svg
                             class="h-6 fill-current text-gray-600 hover:text-logo-700" role="img" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
@@ -48,7 +58,7 @@
                             <path
                                 d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z" />
                         </svg></a>
-                        <!-- future social media icon links -->
+                    <!-- future social media icon links -->
                     <!-- <a class="link" href="#" data-tippy-content="@github_handle"><svg
                             class="h-6 fill-current text-gray-600 hover:text-logo-700" role="img" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
@@ -62,7 +72,7 @@
                             <title>Unsplash</title>
                             <path d="M7.5 6.75V0h9v6.75h-9zm9 3.75H24V24H0V10.5h7.5v6.75h9V10.5z" />
                         </svg></a> -->
-                   <!--  <a class="link" href="#" data-tippy-content="@dribble_handle"><svg
+                    <!--  <a class="link" href="#" data-tippy-content="@dribble_handle"><svg
                             class="h-6 fill-current text-gray-600 hover:text-logo-700" role="img" viewBox="0 0 24 24"
                             xmlns="http://www.w3.org/2000/svg">
                             <title>Dribbble</title>
@@ -84,46 +94,44 @@
                                 d="M23.495 6.205a3.007 3.007 0 0 0-2.088-2.088c-1.87-.501-9.396-.501-9.396-.501s-7.507-.01-9.396.501A3.007 3.007 0 0 0 .527 6.205a31.247 31.247 0 0 0-.522 5.805 31.247 31.247 0 0 0 .522 5.783 3.007 3.007 0 0 0 2.088 2.088c1.868.502 9.396.502 9.396.502s7.506 0 9.396-.502a3.007 3.007 0 0 0 2.088-2.088 31.247 31.247 0 0 0 .5-5.783 31.247 31.247 0 0 0-.5-5.805zM9.609 15.601V8.408l6.264 3.602z" />
                         </svg></a>
                 </div>
-    
+
                 <!-- Use https://simpleicons.org/ to find the svg for your preferred product -->
-    
+
             </div>
-    
+
         </div>
-    
+
         <!--Img Col-->
         <div class="w-full lg:w-2/5">
             <!-- Big profile image for side bar (desktop) -->
             <img src="https://source.unsplash.com/MP0IUfwrn0A"
                 class="rounded-none flex items-left lg:rounded-lg shadow-2xl lg:block">
             <!-- Image from: http://unsplash.com/photos/MP0IUfwrn0A -->
-            
+
         </div>
         <div *ngIf="currentUser; else loggedOut">
             <header class="jumbotron">
-              <h3>
-                <strong>{{ currentUser.username }}</strong> Profile
-              </h3>
+                <h3>
+                    <strong>{{ currentUser.username }}</strong> Profile
+                </h3>
             </header>
-           
+
             <p>
-              <strong>Email:</strong>
-              {{ currentUser.email }}
+                <strong>Email:</strong>
+                {{ currentUser.email }}
             </p>
             <strong>Roles:</strong>
             <ul>
-              <li *ngFor="let role of currentUser.roles">
-                {{ role }}
-              </li>
             </ul>
-          </div>
-          
-          <ng-template #loggedOut>
-            Please login.
-          </ng-template>
+        </div>
 
-        <!-- <div class="p-5 w-2/3 flex flex-col justify-center items-center "> --> <!-- LEFT SIDE OF FORM: profile picture & BIO -->
-           <!--  <div class="flex flex-col mb-5 w-full">
+        <ng-template #loggedOut>
+            Please login.
+        </ng-template>
+
+        <!-- <div class="p-5 w-2/3 flex flex-col justify-center items-center "> -->
+        <!-- LEFT SIDE OF FORM: profile picture & BIO -->
+        <!--  <div class="flex flex-col mb-5 w-full">
                 <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="logo"> Profile image </label>
                 <input
                     class="bg-gray-100 appearance-none border shadow border-gray-500 rounded w-full py-10 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-teal-500"
@@ -136,7 +144,7 @@
                     id="bio" type="text" placeholder="Short summary of what you're most known for"></textarea>
             </div>
         </div> -->
-        
-    
+
+
     </div>
 </div>
