--- a/src/app/componets/sign-up/sign-up.component.html
+++ b/src/app/componets/sign-up/sign-up.component.html
@@ -19,7 +19,7 @@ name="form"
 (ngSubmit)="f.form.valid && onSubmit()"
 #f="ngForm"
 novalidate
- class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg">
+ class="flex flex-wrap items-center justify-center mx-auto my-8 w-full max-w-lg"  style="height:750px">
     <div class="flex flex-wrap -mx-3 mb-6">
         <div class="w-full md:w-1/2 px-3 mb-6 md:mb-0">
             <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="firstName">
