--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -1,7 +1,7 @@
 <!-- Source for form layout. Note: custom built for this form, but referenced from the following:
 https://tailwindcss-custom-forms.netlify.app/ -->
 
-<div class="bg-gray-100 rounded shadow-lg flex flex-row w-full items-start" style="height:700px">
+<div class="bg-gray-100 rounded shadow-lg flex flex-row w-full items-start h-auto" >
     <div class="hidden md:block w-1/3 bg-cover bg-center h-full flex-shrink-0 ">
         <div class="bg-white shadow-lg w-3/4 m-12 border rounded-lg overflow-hidden"> <!-- ORG CARD -->
             <img class="h-48 w-full object-cover" src="../../../assets/images/placeholder-img.jpg">
@@ -669,7 +669,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
             </div>
         </div>
 
-        <button class="bg-gray-700 text-white shadow rounded py-2 px-5 w-64 mt-10">Save Changes</button>
+        <button class="bg-gray-700 text-white shadow rounded py-2 px-5 w-64 mt-8">Save Changes</button>
     </div>
 </div>
 
