fixed lg screen navbar completely

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,8 +77,8 @@
 	}
 </script> -->
 
-<div class="flex sticky justify-between flex-wrap shadow-md bg-gray-100 p-4 w-full z-20 top-0">
-	<mat-toolbar class="flex items-center mr-6">
+<div >
+	<mat-toolbar class="flex sticky justify-between flex-wrap shadow-md bg-gray-100 p-4 w-full z-40 top-0">
 		<mat-toolbar-row>
 			<span>
 				<div class="flex mr-6 ">
