--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -118,8 +118,8 @@
 
 	</mat-toolbar>
 	<!-- Menu items for Hamburger -->
-	<mat-sidenav-container fxFlexFill fxLayout="row" fxLayoutAlign="end" class="shadow-md">
-		<mat-sidenav #sidenav class="bg-gray-400 ">
+	<mat-sidenav-container fxFlexFill fxLayout="row" fxLayoutAlign="end">
+		<mat-sidenav #sidenav class="bg-logo-100 shadow-md sticky font-medium z-40 ">
 			<mat-nav-list (click)="sidenav.toggle()">
 				<button class="static justify-end px-2 py-2">
 					<svg class="fill-current h-6 w-6" role="button" xmlns="http://www.w3.org/2000/svg"
