updated sign-up comp syntax ex: form to user, data to newUser

--- a/src/app/componets/missions-profile/missions-profile.component.html
+++ b/src/app/componets/missions-profile/missions-profile.component.html
@@ -14,7 +14,7 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                             class="inline-block bg-logo-600 text-white text-xs px-2 rounded-full uppercase font-semibold  tracking-wider ml-auto  shadow-md">Verified</span>
 
                     </div>
-                    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">{{newMission.organizationStreetAddress}}<br>{{newMission.city}},{{newMission.state}} {{newMission.zip}} {{newMission.organizationCountry}}</div>
+                    <div class="text-gray-700 text-sm uppercase font-semibold  tracking-wider leading-tight mt-1">{{newMission.organizationStreetAddress}}<br>{{newMission.city}} {{newMission.state}} {{newMission.zip}} {{newMission.organizationCountry}}</div>
                     <div class="text-logo-800 font-semibold text-xs mt-1">Org Bio: {{newMission.bio}}</div>
                 </div>
             </div>
@@ -380,9 +380,9 @@ https://tailwindcss-custom-forms.netlify.app/ -->
                             <option value="Turks & Caicos Is">Turks & Caicos Is</option>
                             <option value="Tuvalu">Tuvalu</option>
                             <option value="Uganda">Uganda</option>
-                            <option value="United Kingdom">United Kingdom</option>
+                            <option value="UK">United Kingdom</option>
                             <option value="Ukraine">Ukraine</option>
-                            <option value="United Arab Erimates">United Arab Emirates</option>
+                            <option value="UAE">United Arab Emirates</option>
                             <option value="USA">United States of America</option>
                             <option value="Uraguay">Uruguay</option>
                             <option value="Uzbekistan">Uzbekistan</option>
